logs/Slang/generated/hdlconv/hdlconvertor_p836.sv.log
name: hdlconvertor_p836
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p836.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p836.sv:6:1: error: expected member
d_edge_ff #p3 d_inst (q, clock, data);
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p836.sv:6:12: error: unknown module 'p3'
d_edge_ff #p3 d_inst (q, clock, data);
           ^~
